--- a/index.html
+++ b/index.html
@@ -33,45 +33,22 @@
 
   <main>
     <!-- HERO SECTION -->
-    <section class="hero-section">
-      <div class="hero-container">
-        <div class="hero-content">
-          <div class="hero-text">
-            <h1 class="hero-title">
-              Master UX/UI Design & <br/>
-              <span class="hero-title-highlight">Land Your Dream Tech Job.</span>
-            </h1>
-            <p class="hero-subtitle">
-              10+ years of industry secrets packed into a 12-week mentorship. No coding. No fluff. Just real-world results.
-            </p>
-            <div class="hero-cta">
-              <a href="tel:+919703448442" class="call-btn call-btn-large">
-                <span class="icon-circle">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-                </span>
-                <span class="number">+91 9703448442</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        
-        <div class="hero-image-wrapper">
-          <!-- <img 
-            src="/images/hero-student.mp4" 
-            alt="Workspace with Figma" 
-            class="hero-image"
-          /> -->
-          <video class="hero-video" autoplay muted loop playsinline>
-  <source src="/images/hero-student.mp4" type="video/mp4" />
-</video>
-          <div class="hero-image-overlay"></div>
-        </div>
-      </div>
-      
-      <!-- Background shapes -->
-      <div class="hero-bg-shape hero-bg-shape-left"></div>
-      <div class="hero-bg-shape hero-bg-shape-right"></div>
-    </section>
+    <section class="hero">
+  <video autoplay muted loop playsinline class="hero-video">
+    <source src="/images/hero-student.mp4" type="video/mp4">
+  </video>
+  <div class="hero-overlay">
+    <div class="hero-content">
+      <h1 class="hero-title">
+        Master UX/UI Design & <br/>
+        <span class="hero-title-highlight">Land Your Dream Tech Job.</span>
+      </h1>
+      <p class="hero-subtitle">
+        10+ years of industry secrets packed into a 12-week mentorship. No coding. No fluff. Just real-world results.
+      </p>
+    </div>
+  </div>
+</section>
 
     <!-- PAIN SECTION -->
     <section id="pain" class="pain-section">
